--- a/package.json
+++ b/package.json
@@ -8,15 +8,37 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "package.json": [
+      "sort-package-json"
+    ]
+  },
   "dependencies": {
+    "autoprefixer": "^10.2.6",
     "next": "11.0.0",
+    "postcss": "^8.3.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.1",
+    "sort-package-json": "^1.50.0",
     "typescript": "^4.3.4"
   }
 }
