--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -14,31 +15,32 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint --fix"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "*.{js,ts,tsx}": "eslint --fix",
+    "*.{css}": "stylelint --fix",
+    "package.json": "sort-package-json"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "10.2.6",
     "next": "11.0.0",
-    "postcss": "^8.3.5",
+    "postcss": "8.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.0"
+    "tailwindcss": "2.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.11",
+    "@types/react": "17.0.11",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1",
-    "sort-package-json": "^1.50.0",
-    "typescript": "^4.3.4"
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "husky": "7.0.1",
+    "lint-staged": "11.0.0",
+    "prettier": "2.3.1",
+    "sort-package-json": "1.50.0",
+    "stylelint": "13.13.1",
+    "stylelint-config-prettier": "8.0.2",
+    "stylelint-config-standard": "22.0.0",
+    "stylelint-prettier": "1.2.0",
+    "typescript": "4.3.4"
   }
 }
